k8s-manifests/frontend-service.yaml
# apiVersion: v1
# kind: Service
# metadata:
#   name: frontend-service
# spec:
#   type: LoadBalancer
#   selector:
#     app: mern-frontend
#   ports:
#     - protocol: TCP
#       port: 80
#       targetPort: 80
# frontend-service.yaml
# apiVersion: v1
# kind: Service
# metadata:
#   name: frontend-service
# spec:
#   type: ClusterIP
#   selector:
#     app: mern-frontend
#   ports:
#     - protocol: TCP
#       port: 80
#       targetPort: 80

apiVersion: v1
kind: Service
metadata:
  name: frontend-service
   # --- START OF NEW SECTION ---
  # This annotation tells the Ingress controller to use the health check
  # named 'mern-frontend-health-check' from the other file.
  annotations:
    cloud.google.com/backend-config: '{"default": "mern-frontend-health-check"}'
  # --- END OF NEW SECTION ---
spec:
  # NodePort required for GCE Ingress
  type: NodePort
  selector:
    app: mern-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
